--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,4 +2,7 @@ node_modules
 # Keep environment variables out of version control
 .env
 
+# Local secrets
+src/config/gcs-key.json
+
 /generated/prisma
